# learn

./: .gitignore  CMakeLists.txt  README.md
cmake/: Findglad.cmake
code/: main.cpp
code/opengl/scene_node/: CMakeLists.txt  SceneNode.cpp  Transform.cpp
code/opengl/scene_node/include/: SceneNode.h  Transform.h
code/opengl/shader/: CMakeLists.txt  ShaderProgram.cpp  ShaderUniform.cpp
code/opengl/shader/include/: Shader.h  ShaderProgram.h  ShaderUniform.h
code/opengl/test/: CMakeLists.txt  Model.cpp
code/opengl/test/include/: Model.h
code/opengl/utils/: Bezier.cpp  CMakeLists.txt
code/opengl/utils/include/: Bezier.h  Node.hpp  VertexLayout.hpp
code/test/: CMakeLists.txt  Camera.cpp  TestRenderCode.cpp  TestRenderUI.cpp
code/test/include/: Camera.h  EventTypes.hpp  Interfaces.hpp  ResourceTypes.hpp  TestRenderCode.h  TestRenderUI.h
code/utils/container/include/: Node.hpp  RAIIWrapper.hpp  Scene.hpp
code/utils/event_bus/include/: EventBus.hpp
code/utils/logger/: CMakeLists.txt  GlobalLogger.hpp  GlobalLogger_D.hpp
code/utils/logger/include/: Logger.hpp
code/utils/model_loader/: CMakeLists.txt  ModelParser.cpp
code/utils/model_loader/include/: ModelParser.h
code/utils/resource/: CMakeLists.txt
code/utils/resource/include/: Resource.hpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
